--- a/style/style.css
+++ b/style/style.css
@@ -1,120 +1,174 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
+
 @font-face {
-    font-family: 'Jack Frost';
-    src: url(../fonts/Jack\ Frost.otf);
+  font-family: 'Jack Frost';
+  src: url(../fonts/Jack\ Frost.otf);
 }
-body{
-    background: #f4f2ec url(./img/fundo.png) repeat-x;
-    background-color: #fff12b;
-    scroll-behavior: smooth;
+
+body {
+  background: #f4f2ec url(./img/fundo.png) repeat-x;
+  background-color: #fff12b;
+  scroll-behavior: smooth;
 }
-a{
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    transition: 0.3s;
-    font-weight: 500;
+
+a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  transition: 0.3s;
+  font-weight: 500;
 }
-  
+
 a:hover {
   opacity: 0.7;
 }
-  
-  .logo {
-    font-size: 24px;
-    display: flex;
-    align-items: center;
-    text-transform: uppercase;
-    letter-spacing: 4px;
+
+.logo {
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+.logo img {
+  width: 70px;
+  margin-right: 14px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: 'Jack Frost';
+  background: #0A6EB7;
+  height: 8vh;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+}
+
+.nav-list li {
+  letter-spacing: 3px;
+  margin-left: 32px;
+}
+
+.mobile-menu {
+  display: none;
+  cursor: pointer;
+}
+
+.mobile-menu div {
+  width: 32px;
+  height: 2px;
+  background: antiquewhite;
+  margin: 8px;
+  transition: 0.3s;
+}
+
+.parallax{
+  /*border: 1px solid red;*/
+  margin: 30px;
+  padding: 300px;
+  border-radius: 20px;
+  background-image: linear-gradient(rgba(4, 9, 30, 0.425),rgba(4,9,30,0.7)),url(../assets/parallax.jpg);
+  min-height: 300px; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: 'Jack Frost';
+  color: white;
+  font-size: 80px;
+}
+.parallax p{
+  font-size: 20px;
+}
+
+.parallax span{
+  color: #fff12b;
+}
+
+.tbt-btn{
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 15px;
+  padding: 12px 34px;
+  font-size: 13px;
+  position: relative;
+  cursor: pointer;
+}
+.tbt-btn:hover{
+  border: 1px solid ;
+  border-color: #fff12b;
+  transition: 1s ease;
+}
+
+
+@media (max-width: 999px) {
+  body {
+    overflow-x: hidden;
   }
-  .logo img{
-    width: 70px;
-    margin-right: 14px;
-  }
-  nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-family: 'Jack Frost';
-    background: #0A6EB7;
-    height: 8vh;
-  }
-  
+
   .nav-list {
-    list-style: none;
-    display: flex;
-  }
-  
-  .nav-list li {
-    letter-spacing: 3px;
-    margin-left: 32px;
-  }
-  
-  .mobile-menu {
     display: none;
-    cursor: pointer;
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 92vh;
+    background: #0A6EB7;
+    flex-direction: column;
+    align-items: center;
+    justify-content: left;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
   }
-  
-  .mobile-menu div {
-    width: 32px;
-    height: 2px;
-    background: antiquewhite;
-    margin: 8px;
-    transition: 0.3s;
-  }
-  
-  @media (max-width: 999px) {
-    body {
-      overflow-x: hidden;
-    }
-    .nav-list {
-      position: absolute;
-      top: 8vh;
-      right: 0;
-      width: 50vw;
-      height: 92vh;
-      background: #0A6EB7;
-      flex-direction: column;
-      align-items: center;
-      justify-content: left;
-      transform: translateX(100%);
-      transition: transform 0.3s ease-in;
-    }
-    .nav-list li {
-      margin: 10px;
-      opacity: 0;
-    }
-    .mobile-menu {
-      display: block;
-    }
-  }
-  
-  .nav-list.active {
-    transform: translateX(0);
-  }
-  
-  @keyframes navLinkFade {
-    from {
-      opacity: 0;
-      transform: translateX(50px);
-    }
-    to {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
-  
-  .mobile-menu.active .line1 {
-    transform: rotate(-45deg) translate(-8px, 8px);
-  }
-  
-  .mobile-menu.active .line2 {
+
+  .nav-list li {
+    margin: 10px;
     opacity: 0;
   }
-  
-  .mobile-menu.active .line3 {
-    transform: rotate(45deg) translate(-5px, -7px);
+
+  .mobile-menu {
+    display: none;
   }
-  
+  .parallax {
+    
+    background-attachment: scroll;
+  }
+}
+
+.nav-list.active {
+  transform: translateX(0);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.mobile-menu.active .line1 {
+  transform: rotate(-45deg) translate(-8px, 8px);
+}
+
+.mobile-menu.active .line2 {
+  opacity: 0;
+}
+
+.mobile-menu.active .line3 {
+  transform: rotate(45deg) translate(-5px, -7px);
+}
