--- a/style/style.css
+++ b/style/style.css
@@ -72,11 +72,11 @@ nav {
 
 .parallax{
   /*border: 1px solid red;*/
-  margin: 30px;
-  padding: 300px;
+  margin:15px;
+  padding: 200px;
   border-radius: 20px;
   background-image: linear-gradient(rgba(4, 9, 30, 0.425),rgba(4,9,30,0.7)),url(../assets/parallax.jpg);
-  min-height: 300px; 
+  min-height: 200px; 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -91,6 +91,9 @@ nav {
 
 .parallax span{
   color: #fff12b;
+}
+.welcome{
+  display: none;
 }
 
 .tbt-btn{
@@ -110,6 +113,14 @@ nav {
   transition: 1s ease;
 }
 
+hr{
+  margin: 0 auto;
+  padding: 1.5px;
+  background-color: #0A6EB7;
+  border: none;
+  width: 1000px;
+  margin-bottom: 15px;
+}
 
 @media (max-width: 999px) {
   body {
@@ -140,8 +151,35 @@ nav {
     display: none;
   }
   .parallax {
-    
+    display: none;
     background-attachment: scroll;
+  }
+  .welcome{
+    display:list-item;
+    padding: 50px;
+    min-height: 50px;
+    background-image: linear-gradient(rgba(4, 9, 30, 0.425),rgba(4,9,30,0.7)),url(../assets/parallax.jpg);
+    min-height: 200px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: 'Jack Frost';
+    color: white;
+    font-size: 50px;
+    margin: 10px;
+    border-radius: 20px;
+  }
+  .welcome p{
+    font-size: 20px;
+    margin-top: 80px;
+  }
+  .welcome span{
+    color: #fff12b;
+  }
+  hr{
+    margin-top: 15px;
+    width: 50%;
   }
 }
 
@@ -172,3 +210,4 @@ nav {
 .mobile-menu.active .line3 {
   transform: rotate(45deg) translate(-5px, -7px);
 }
+
