--- a/style/style.css
+++ b/style/style.css
@@ -72,11 +72,11 @@ nav {
 
 .parallax{
   /*border: 1px solid red;*/
-  margin:15px;
+  margin:45px;
   padding: 200px;
   border-radius: 20px;
   background-image: linear-gradient(rgba(4, 9, 30, 0.425),rgba(4,9,30,0.7)),url(../assets/parallax.jpg);
-  min-height: 200px; 
+  min-height: 300px; 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -174,10 +174,11 @@ hr{
   }
   .welcome{
     display:list-item;
+    list-style: none;
     padding: 50px;
     min-height: 50px;
     background-image: linear-gradient(rgba(4, 9, 30, 0.425),rgba(4,9,30,0.7)),url(../assets/parallax.jpg);
-    min-height: 200px; 
+    min-height: 250px; 
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -185,7 +186,7 @@ hr{
     font-family: 'Jack Frost';
     color: white;
     font-size: 50px;
-    margin: 10px;
+    margin: 40px;
     border-radius: 20px;
   }
   .welcome p{
