--- a/style/style.css
+++ b/style/style.css
@@ -142,7 +142,12 @@ hr{
 .img-conteudo img{
   max-width: 50%;
   float: left;
-  margin: 20px;
+  margin: 10px 15px 0 45px;
+  border-radius: 15px;
+}
+.title{
+  font-family: 'Jack Frost';
+  color:white
 }
 
 
@@ -191,12 +196,12 @@ hr{
     background-size: cover;
     font-family: 'Jack Frost';
     color: white;
-    font-size: 50px;
+    font-size: 36px;
     margin: 40px;
     border-radius: 20px;
   }
   .welcome p{
-    font-size: 20px;
+    font-size: 18px;
     margin-top: 80px;
   }
   .welcome span{
